--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
   </head>
   <body>
     <div class="container">
-      <h1>Word Puzzle</h1>
+      <div class="row">
+        <form class="form">
+          <div class="col-12">
+          <h1 class="my-4">Word Puzzle</h1>
+            <div class="userInput">
+              <input type="text" class="form-control" id="userInput" placeholder="Please enter a sentence">
+            </div>
+            <div class="mt-4 text-center">
+              <button type="submit" class="btn btn-success form-control" name="button">submit</button>
+            </div>
+            <div class="mt-4 text-center">
+              <button id="clear" class="btn btn-outline-secondary form-control">Clear Results</button>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="output mt-4">
+
+      </div>
     </div>
   </body>
 </html>
